Assignment3/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'auto'", "'integer'", "'void'", "'array'", 
                     "'break'", "'float'", "'return'", "'out'", "'boolean'", 
                     "'for'", "'string'", "'continue'", "'do'", "'function'", 
                     "'of'", "'else'", "'if'", "'while'", "'inherit'", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'", "':'", 
                     "'{'", "'}'", "'='", "'readInteger'", "'readFloat'", 
                     "'readBoolean'", "'readString'", "'printInteger'", 
                     "'printBoolean'", "'printString'", "'writeFloat'", 
                     "'super'", "'preventDefault'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "FLOATLIT", "BOOLLIT", "STRINGLIT", 
                      "AUTO", "INTEGER", "VOID", "ARRAY", "BREAK", "FLOAT", 
                      "RETURN", "OUT", "BOOLEAN", "FOR", "STRING", "CONTINUE", 
                      "DO", "FUNCTION", "OF", "ELSE", "IF", "WHILE", "INHERIT", 
                      "COMMENT", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "AND", "OR", "EQUAL", "NOT_EQUAL", "SMALLER", "SMALLER_EQUAL", 
                      "GREATER", "GREATER_EQUAL", "CONCAT", "LB", "RB", 
                      "LS", "RS", "DOT", "COMMA", "SEMI", "COLON", "LP", 
                      "RP", "ASSIGN", "READI", "READF", "READB", "READS", 
                      "PRINTI", "PRINTB", "PRINTS", "WRITEF", "SUPER", "PREVENTDEFAULT", 
                      "ID", "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecl = 2
    RULE_varlist = 3
    RULE_var1 = 4
    RULE_idlist = 5
    RULE_param = 6
    RULE_ap_inherit = 7
    RULE_ap_out = 8
    RULE_funcdecl = 9
    RULE_paramlist = 10
    RULE_paramprime = 11
    RULE_inher_func = 12
    RULE_stmt = 13
    RULE_assignstmt = 14
    RULE_scalar_var = 15
    RULE_ifstmt = 16
    RULE_else_part = 17
    RULE_forstmt = 18
    RULE_condition_expr = 19
    RULE_update_expr = 20
    RULE_whilestmt = 21
    RULE_dowhilestmt = 22
    RULE_breakstmt = 23
    RULE_continuestmt = 24
    RULE_returnstmt = 25
    RULE_list1 = 26
    RULE_callstmt = 27
    RULE_blockstmt = 28
    RULE_blocklist = 29
    RULE_typ = 30
    RULE_type_func = 31
    RULE_type_element = 32
    RULE_type_array = 33
    RULE_integerlist = 34
    RULE_literal = 35
    RULE_arraylit = 36
    RULE_expr_primelist = 37
    RULE_expr_list = 38
    RULE_index_operator = 39
    RULE_func_call = 40
    RULE_list_arg = 41
    RULE_list_argprime = 42
    RULE_special_func = 43
    RULE_readi = 44
    RULE_readf = 45
    RULE_readb = 46
    RULE_reads = 47
    RULE_printi = 48
    RULE_printb = 49
    RULE_prints = 50
    RULE_writef = 51
    RULE_super_func = 52
    RULE_preventdefault = 53
    RULE_operand = 54
    RULE_expr = 55
    RULE_expr1 = 56
    RULE_expr2 = 57
    RULE_expr3 = 58
    RULE_expr4 = 59
    RULE_expr5 = 60
    RULE_expr6 = 61
    RULE_expr7 = 62
    RULE_expr8 = 63

    ruleNames =  [ "program", "decl", "vardecl", "varlist", "var1", "idlist", 
                   "param", "ap_inherit", "ap_out", "funcdecl", "paramlist", 
                   "paramprime", "inher_func", "stmt", "assignstmt", "scalar_var", 
                   "ifstmt", "else_part", "forstmt", "condition_expr", "update_expr", 
                   "whilestmt", "dowhilestmt", "breakstmt", "continuestmt", 
                   "returnstmt", "list1", "callstmt", "blockstmt", "blocklist", 
                   "typ", "type_func", "type_element", "type_array", "integerlist", 
                   "literal", "arraylit", "expr_primelist", "expr_list", 
                   "index_operator", "func_call", "list_arg", "list_argprime", 
                   "special_func", "readi", "readf", "readb", "reads", "printi", 
                   "printb", "prints", "writef", "super_func", "preventdefault", 
                   "operand", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8" ]

    EOF = Token.EOF
    INTLIT=1
    FLOATLIT=2
    BOOLLIT=3
    STRINGLIT=4
    AUTO=5
    INTEGER=6
    VOID=7
    ARRAY=8
    BREAK=9
    FLOAT=10
    RETURN=11
    OUT=12
    BOOLEAN=13
    FOR=14
    STRING=15
    CONTINUE=16
    DO=17
    FUNCTION=18
    OF=19
    ELSE=20
    IF=21
    WHILE=22
    INHERIT=23
    COMMENT=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    NOT=30
    AND=31
    OR=32
    EQUAL=33
    NOT_EQUAL=34
    SMALLER=35
    SMALLER_EQUAL=36
    GREATER=37
    GREATER_EQUAL=38
    CONCAT=39
    LB=40
    RB=41
    LS=42
    RS=43
    DOT=44
    COMMA=45
    SEMI=46
    COLON=47
    LP=48
    RP=49
    ASSIGN=50
    READI=51
    READF=52
    READB=53
    READS=54
    PRINTI=55
    PRINTB=56
    PRINTS=57
    WRITEF=58
    SUPER=59
    PREVENTDEFAULT=60
    ID=61
    WS=62
    ERROR_CHAR=63
    UNCLOSE_STRING=64
    ILLEGAL_ESCAPE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 128
                self.decl()
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.ID):
                    break

            self.state = 133
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.varlist()
            self.state = 140
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def var1(self):
            return self.getTypedRuleContext(MT22Parser.Var1Context,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = MT22Parser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varlist)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(MT22Parser.ID)
                self.state = 143
                self.var1()
                self.state = 144
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.idlist()
                self.state = 147
                self.match(MT22Parser.COLON)
                self.state = 148
                self.typ()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def var1(self):
            return self.getTypedRuleContext(MT22Parser.Var1Context,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar1" ):
                return visitor.visitVar1(self)
            else:
                return visitor.visitChildren(self)




    def var1(self):

        localctx = MT22Parser.Var1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var1)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(MT22Parser.COMMA)
                self.state = 153
                self.match(MT22Parser.ID)
                self.state = 154
                self.var1()
                self.state = 155
                self.expr()
                self.state = 156
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(MT22Parser.COLON)
                self.state = 159
                self.typ()
                self.state = 160
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(MT22Parser.ID)
                self.state = 165
                self.match(MT22Parser.COMMA)
                self.state = 166
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ap_inherit(self):
            return self.getTypedRuleContext(MT22Parser.Ap_inheritContext,0)


        def ap_out(self):
            return self.getTypedRuleContext(MT22Parser.Ap_outContext,0)


        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.ap_inherit()
            self.state = 171
            self.ap_out()
            self.state = 172
            self.match(MT22Parser.ID)
            self.state = 173
            self.match(MT22Parser.COLON)
            self.state = 174
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ap_inheritContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_ap_inherit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAp_inherit" ):
                return visitor.visitAp_inherit(self)
            else:
                return visitor.visitChildren(self)




    def ap_inherit(self):

        localctx = MT22Parser.Ap_inheritContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ap_inherit)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.match(MT22Parser.INHERIT)
                pass
            elif token in [MT22Parser.OUT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ap_outContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_ap_out

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAp_out" ):
                return visitor.visitAp_out(self)
            else:
                return visitor.visitChildren(self)




    def ap_out(self):

        localctx = MT22Parser.Ap_outContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ap_out)
        try:
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.match(MT22Parser.OUT)
                pass
            elif token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def type_func(self):
            return self.getTypedRuleContext(MT22Parser.Type_funcContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def inher_func(self):
            return self.getTypedRuleContext(MT22Parser.Inher_funcContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(MT22Parser.ID)
            self.state = 185
            self.match(MT22Parser.COLON)
            self.state = 186
            self.match(MT22Parser.FUNCTION)
            self.state = 187
            self.type_func()
            self.state = 188
            self.match(MT22Parser.LB)
            self.state = 189
            self.paramlist()
            self.state = 190
            self.match(MT22Parser.RB)
            self.state = 191
            self.inher_func()
            self.state = 192
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramlist)
        try:
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.paramprime()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def paramprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamprime" ):
                return visitor.visitParamprime(self)
            else:
                return visitor.visitChildren(self)




    def paramprime(self):

        localctx = MT22Parser.ParamprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramprime)
        try:
            self.state = 203
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.param()
                self.state = 199
                self.match(MT22Parser.COMMA)
                self.state = 200
                self.paramprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 202
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inher_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_inher_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInher_func" ):
                return visitor.visitInher_func(self)
            else:
                return visitor.visitChildren(self)




    def inher_func(self):

        localctx = MT22Parser.Inher_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_inher_func)
        try:
            self.state = 208
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 205
                self.match(MT22Parser.INHERIT)
                self.state = 206
                self.match(MT22Parser.ID)
                pass
            elif token in [MT22Parser.LP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignstmt(self):
            return self.getTypedRuleContext(MT22Parser.AssignstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(MT22Parser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(MT22Parser.ForstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(MT22Parser.WhilestmtContext,0)

